added server controls

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/fiber": "^9.1.0",
@@ -22,9 +23,11 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-three": "^0.9.7",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "typescript": "^5",
